--- a/css/index.css
+++ b/css/index.css
@@ -20,6 +20,10 @@ font: inherit;
 vertical-align: baseline;  
 }
 /*GENERAL STYLES*/
+*{
+    box-sizing: border-box;
+}
+
 html{
     font-size:62.5%;
 }
@@ -133,4 +137,52 @@ button:hover{
 }
 .artist img{
     width:100%;
+}
+/* Media Queries */
+
+@media(max-width: 500px){
+    /* Navigation Bar */
+    nav {
+        width: 50%;
+    }
+    nav a {
+        font-size: 1.5rem;
+    }
+    nav a:nth-child(1){
+        font-weight: bold;
+    }
+
+    /* Banner Image  */
+    .title-container div{
+        width: 100%;
+        background-size: 200%;
+        background-repeat: no-repeat;
+        background-position: right 50% bottom 90%;
+    }
+    .title-container div h1 {
+        font-size: 3.5rem;
+    }
+    .title-container hr {
+        width: 100%;
+    }
+    
+
+    /* Artist Section */
+    .artists-container {
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-content: center;
+        width: 100%;
+        font-size: 1.25rem;
+    }
+    .artist{
+        width: 100%;
+    }
+    .artist img {
+        padding: 10%;
+        width: 100%;
+    }
+    .artist .bio {
+        margin: 5rem 20%;
+    }
 }
